<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/joinCircle"

            android:title="@string/join_circle" />

        <item
            android:id="@+id/myCircle"
            android:title="@string/my_circle" />

        <item
            android:id="@+id/joinedCircle"
            android:title="@string/joined_circle" />

        <item
            android:id="@+id/alertCenter"
            android:title="@string/alerts_center" />


        <item
            android:id="@+id/inviteFriends"
            android:title="@string/invite_friends" />


        <item
            android:id="@+id/sendHelpAlert"
            android:title="@string/send_alert_help" />


        <item
            android:id="@+id/signout"
            android:title="@string/sign_out" />

    </group>




</menu>
