<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mytracker.gpstracker.travelingingroup.InviteCodeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:logo="@mipmap/ic_launcher"
        app:titleTextColor="?attr/colorPrimary">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/ask_your_friends_for_their_circle_code"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:fontFamily="monospace"
        android:layout_marginTop="42dp"
        android:text="XXXXXX" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/share_your_code_out_loud_or_send_it_in_a_message"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="37dp"
        android:background="@drawable/button_shape"
        android:onClick="sendCode"
        android:text="@string/send_code"
        android:textAllCaps="false"
        android:textColor="#FFFF"
        android:textSize="18sp"

        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="Register"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="@string/done"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
       />


</LinearLayout>
